# static-analyzer

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  Project.sln  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  run_with_mprof.py  spa.vcxproj  spa.vcxproj.filters
Team14/Code14/src/spa/: CMakeLists.txt
Team14/Code14/src/spa/src/: main.cpp  spa.cpp  spa.h
Team14/Code14/src/spa/src/Interface/: Interface.cpp  PKBInterface.cpp  PKBInterface.h  QPSInterface.h  SPInterface.cpp  SPInterface.h  UIInterface.h
Team14/Code14/src/spa/src/PKB/: PKB.cpp  PKB.h
Team14/Code14/src/spa/src/PKB/Interface/: PKBInterface.h
Team14/Code14/src/spa/src/QPS/: QPS.cpp  QPS.h
Team14/Code14/src/spa/src/QPS/Interface/: QPSInterface.h
Team14/Code14/src/spa/src/SP/: SP.cpp  SP.h
Team14/Code14/src/spa/src/UI/: UI.cpp  UI.h
Team14/Code14/src/spa/src/commons/: entity.cpp  entity.h  exceptions.h  hash_combine.h  pattern.cpp  pattern.h  pkb_query.cpp  reader.cpp  reader.h  relationship.cpp  relationship.h  result.cpp  result.h  types.h
Team14/Code14/src/spa/src/pkb/: PKB.cpp  PKB.h  cache.h  entity_manager.cpp  entity_manager.h  exception.h  pkb.cpp  pkb.h
Team14/Code14/src/spa/src/qps/: QPS.cpp  QPS.h  exceptions.h  qps.cpp  qps.h  query_builder.cpp  query_builder.h  query_lexer.cpp  query_lexer.h  query_parser.cpp  query_parser.h  query_token.cpp  query_token.h  result.cpp  result.h
Team14/Code14/src/spa/src/sp/: SP.h  exceptions.h  interface.h  lexer.cpp  lexer.h  simeple_parser.h  simple_lexer.cpp  simple_lexer.h  simple_parser.cpp  simple_parser.h  simple_token.cpp  simple_token.h  source_reader.cpp  source_reader.h  sp.cpp  sp.h  token.cpp  token.h
Team14/Code14/src/spa/src/ui/: ui.cpp  ui.h
Team14/Code14/src/unit_testing/: CMakeLists.txt
Team14/Code14/src/unit_testing/src/: TestAST.cpp  ref_test.cpp
Team14/Code14/src/unit_testing/src/commons/: entity_hash_test.cpp  parse_expr_test.cpp
Team14/Code14/src/unit_testing/src/pkb/: cache_test.cpp  pkb_populator_test.cpp  pkb_query_test.cpp  pkb_test_helper.h  populate_entity_test.cpp  populate_pattern_test.cpp  populate_relationship_test.cpp  query_entity_test.cpp  query_pattern_test.cpp  query_relationship_test.cpp  simple_stats_test.cpp
Team14/Code14/src/unit_testing/src/qps/: builder_test.cpp  lexer_test.cpp  parser_test.cpp  qe_test.cpp  qps_test_helper.h  query_declaration_test.cpp  query_parser_test.cpp  query_synonym_test.cpp  result_test.cpp  synonym_reference_test.cpp  validator_test.cpp
Team14/Code14/src/unit_testing/src/sp/: cyclic_test.cpp  extractor_test.cpp  lexer_test.cpp  parser_test.cpp  semantic_test.cpp
scripts/: cov.sh  (+5 more)
(+985 files in other folders)
